# trx-manuscript-2026-benchmark

./: .gitignore  ANALYSIS.md  README.md  TESTING_METHODOLOGY.md  check_counts.py  orchestrate.py  relay_test.py  run_benchmarks.sh  test_trk.mjs  unified_test.py
cpp/: CMakeLists.txt  benchmark.cpp  utils.cpp  utils.hpp
js/: benchmark.mjs  package-lock.json  package.json  utils.js
python/: benchmark.py  requirements.txt  utils.py
rust/: Cargo.toml
rust/src/: main.rs  utils.rs
test_data/: run_js.mjs  run_py.py
test_data/cpp/: CMakeLists.txt  test.cpp
test_data/rust/: Cargo.toml
test_data/rust/src/: main.rs
